# scrobbler

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
analyzer/: README.md  __init__.py
analyzer/api/: router.py
analyzer/db/: __init__.py  repo.py
analyzer/ingestion/: filesystem.py
analyzer/jobs/: handlers.py  queue.py
analyzer/matching/: __init__.py  normalizer.py  uid.py
analyzer/services/: __init__.py  catalog_analysis.py  enrich_service.py  library_admin_service.py  library_service.py  library_stats_service.py  match_service.py  summary_service.py
analyzer/tests/: test_catalog_analysis.py
backend/app/: main.py
backend/tests/: conftest.py  fixtures.py  test_analyzer_queue_api.py  test_analyzer_summary_api.py  test_config_api.py  test_db_adapter.py  test_enrichment_api.py  test_integration_flows.py  test_listenbrainz_export_api.py  test_listenbrainz_export_service.py  test_listenbrainz_import.py  test_listenbrainz_service.py  test_schema_updates.py  test_scrobble_api.py  test_stats_api.py
db/: schema.sql
docker/: Dockerfile
docs/: analyzer-jobs.md  database-design.md  listenbrainz_genre_endpoints.md  system-data-flow.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
frontend/scripts/: preinstall-clean.cjs
frontend/src/: App.svelte  app.css
scrobbler/app/: main.py
scrobbler/tests/: conftest.py  fixtures.py  test_analyzer_summary_api.py  test_analyzer_utils.py  test_db_adapter.py  test_integration_flows.py  (+6 more)
(+68 files in other folders)
