[tool.poetry]
name = "scrobbler"
version = "0.1.0"
description = "Music scrobbler service"
authors = ["Auto Generated"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.29"
asyncmy = "^0.2.8"
aiosqlite = "^0.19.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
redis = "^5.0.4"
rq = "^1.15.1"
rapidfuzz = "^3.7.0"
Unidecode = "^1.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
anyio = "^4.3.0"

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
python_files = ["test_*.py"]
markers = [
    "integration: integration tests that exercise analyzer and scrobbler flows",
]

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
